fixed for CHLK-3058 New item title check - NEW Flow

--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -19,7 +19,8 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
     isAnnouncement = (announcement.isStandartAnnouncement() || isAdminAnnouncement)
     disableDeleteBtn = announcement.getGradingStudentsCount() > 0
     if !isAdminAnnouncement
-        .title-block-container
+        +ActionLink('announcement', 'showTitlePopUp')#show-title-popup.x-hidden
+        div(class=announcement.getExpiresDate() ? 'with-date' : '').title-block-container
             +RenderWith(announcement.getTitleModel(), chlk.templates.announcement.AnnouncementTitleTpl)
     .left-block
         if isAdminAnnouncement
