fixed CHLK-2420 Sysadmin > Testing Apps that cost $$

--- a/Chalkable.Web/assets/jade/activities/apps/Apps.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/Apps.jade
@@ -39,5 +39,6 @@ mixin AppManagementControls(id, state, liveId)
 
                     .td.action-links
                         +ActionLink('apps', 'details', item.getId()).profile
+                        +ActionLink('apps', 'testApplication', item.getDeveloperId()).profile
                         +ActionLink('apps', 'tryDeleteApplication', item.getId(), item.getName()).remove
 
