fixed for CHLK-3089 Teacher. Calendar. When teacher wants to create an item, he will see an empty page

--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/DayPeriodPopUp.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/DayPeriodPopUp.jade
@@ -28,7 +28,7 @@
                             div
                                 +TooltipWithOverflow(item.getTitle()).item-title
     if !self.getUserRole().isStudent()
-        +ActionLink('announcement', 'add', clazz.getId(), chlk.models.announcement.AnnouncementTypeEnum.HW, date.format('mm/dd/yy'), true).ann-button.plus-ann
+        +ActionLink('announcement', 'addViaCalendar', date.format('mm-dd-yy'), true, clazz.getId() || '').ann-button.plus-ann
 
 
 
