fixed for CHLK-3102 Teacher. Grades. Sorting by standards and item type doesn't work correctly

--- a/Chalkable.Web/assets/sass/partials/main/_grading.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_grading.scss
@@ -481,7 +481,7 @@ BODY {
                 }
 
                 &.no-items{
-                  .chzn-container-single{
+                  select:not(.with-value) +.chzn-container-single{
                     display: none;
                   }
                 }
