--- a/Chalkable.Web/assets/sass/partials/main/_attendance.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_attendance.scss
@@ -1485,10 +1485,12 @@ BODY {
 }
 
 #submit-chart{
-  padding: 3px 25px 5px;
+  padding: 8px 25px;
   font-weight: bold;
-  vertical-align: middle;
+  vertical-align: top;
   display: none;
+  margin-top: 14px;
+  margin-bottom: 0;
 }
 
 .seating-chart-popup.chlk-pop-up-container{
