fixed for CHLK-3107 Apps / attach / save - Change color of "Save" and "Attach" button

--- a/Chalkable.Web/assets/sass/partials/main/popups/attachments/_attachment_dialogs.scss
+++ b/Chalkable.Web/assets/sass/partials/main/popups/attachments/_attachment_dialogs.scss
@@ -53,7 +53,7 @@
         >DIV, >A{
           display: inline-block;
           padding: 11px 15px 12px 11px;
-          background: #070707;
+          background: #4387fd;
           color: white;
           font: bold 14px Arial;
           word-spacing: 3px;
