--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -29,7 +29,9 @@
         ChlkHelpers.Olark();
     }
     @ChlkHelpers.RenderSiteRoot(Url)
-
+    
+    
+    <script type="text/javascript" src="@Url.StaticContent("/app/lib/es5-shim.min.js")"></script>
     <script type="text/javascript" src="@Url.StaticContent("/app/chlk/shared.js")"></script>
     <script type="text/javascript" src="@Url.StaticContent("/app/chlk/chlk-messages.js")"></script>
     <script type="text/javascript" src="@Url.StaticContent("/app/chlk/chlk-constants.js")"></script>
@@ -195,15 +197,14 @@
 </script>
 
         <script type="text/javascript">
-            var values = document.getElementsByClassName('valuable-script'), value, name;
-            var len = values.length;
-            for (var i = 0; i < len; i++) {
-                value = values[i];
-                if (value.text.trim()) {
-                    name = value.getAttribute('id').split('-')[0];
-                    window[name] = JSON.parse(value.text).data;
-                }
-            }
+            (function($) {
+                $('.valuable-script').each(function() {
+                    if (!/^\s*$/.test(this.text || '')) {
+                        var name = $(this).attr('id').split('-')[0];
+                        window[name] = JSON.parse($(this).text()).data;
+                    }
+                });
+            }(jQuery));
         </script>
         
         <script type="text/javascript">
@@ -348,7 +349,7 @@
                 };
 
                 cfgObject = JSON.stringify(cfgObject);
-                scr.innerHTML = "ria.__CFG = " + cfgObject;
+                $(scr).text("ria.__CFG = " + cfgObject);
                 document.getElementsByTagName('head').item(0).appendChild(scr);
             })(roleAppScript);
         </script>
