--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -275,6 +275,7 @@
             var USER_ROLE_EXT = '@ViewData.GetValueOrNull("Rolename")';
             var currentSchoolYearId = '@ViewData.GetValueOrNull(ViewConstants.CURR_SCHOOL_YEAR_ID)';
             var serverTime = '@ViewData.GetValueOrNull(ViewConstants.SERVER_TIME)';
+            var clientTime = new Date();
             var schoolYearServerTime = '@ViewData.GetValueOrNull(ViewConstants.SCHOOL_YEAR_SERVER_TIME)';
             var currentChlkPerson = parseJsonToObj('@ViewData.GetValueOrNull(ViewConstants.CURRENT_PERSON)');
             var classesToFilter = parseJsonToArray('@ViewData.GetValueOrNull(ViewConstants.CLASSES)');
