--- a/Chalkable.Web/assets/sass/partials/main/popups/attachments/_attachment_dialogs.scss
+++ b/Chalkable.Web/assets/sass/partials/main/popups/attachments/_attachment_dialogs.scss
@@ -81,7 +81,10 @@
       overflow-x: hidden;
       height: 100% !important;
       width: 100%;
-      display: table;
+
+      &.picture-wrap{
+        display: table;
+      }
 
       .picture-container{
         display: table-cell;
