--- a/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_install.scss
+++ b/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_install.scss
@@ -2,6 +2,12 @@
 
   .dialog{
     &.app-market-install{
+
+
+      .install-app-dialog-model-wait{
+
+      }
+
         width: 480px;
         min-height: 332px;
 
