fixed for CHLK-2926 New item view > formatting top if 'ready to be graded' icon

--- a/Chalkable.Web/assets/jade/controls/feed-item.jade
+++ b/Chalkable.Web/assets/jade/controls/feed-item.jade
@@ -35,7 +35,7 @@ mixin FeedItem(item, disabled)
                             h2.animated-header=item.getClassName()
                             p.animated
                                 span.title=item.getTitle() + ' '
-                                span.content=item.getShortContent()
+                                |#{item.getShortContent()}
                             .animated=item.getExpiresDate().toString('m/d/y')
                             div(data-tooltip=Msg.Document_Attached).attachment-icon
                             div(data-tooltip=(item.getApplicationsCount() == 1 ? item.getApplicationName() : Msg.Application(true)) + ' ' + Msg.Attached).apps-icon
