--- a/Chalkable.Web/assets/jade/controls/glance-box.jade
+++ b/Chalkable.Web/assets/jade/controls/glance-box.jade
@@ -1,3 +1,19 @@
+mixin GlanceItem(item, converter, useTooltip, inverse)
+    summary = (item.getSummaryMethod || item.data.getSummary)()
+    summary = converter ? converter(summary) : summary
+    total = (item.getTotalMethod || item.data.getTotal)()
+    if useTooltip
+        .glance-item
+            if inverse
+                div(data-tooltip=summary, data-tooltip-type="overflow").summary=summary
+                div(data-tooltip=total, data-tooltip-type="overflow").total=total
+            else
+                div(data-tooltip=total, data-tooltip-type="overflow").total=total
+                div(data-tooltip=summary, data-tooltip-type="overflow").summary=summary
+    else
+        text = self.getShortText(total, summary)
+        div(data-tooltip=text, data-tooltip-type="overflow")=text
+
 mixin GlanceBox(controller, action, data, color, converter, useTooltip, inverse)
     if controller
         +ActionLink(controller, action).glance-box.hover-action-box
@@ -10,20 +26,11 @@ mixin GlanceBox(controller, action, data, color, converter, useTooltip, inverse)
                     .details-container
                         .details
                             each item, i in data.items
-                                summary = (item.getSummaryMethod || item.data.getSummary)()
-                                summary = converter ? converter(summary) : summary
-                                total = (item.getTotalMethod || item.data.getTotal)()
-                                if useTooltip
-                                    .glance-item
-                                        if inverse
-                                            div(data-tooltip=summary, data-tooltip-type="overflow").summary=summary
-                                            div(data-tooltip=total, data-tooltip-type="overflow").total=total
-                                        else
-                                            div(data-tooltip=total, data-tooltip-type="overflow").total=total
-                                            div(data-tooltip=summary, data-tooltip-type="overflow").summary=summary
+                                if item.controller
+                                    +ActionLinkWithPrepend(item.controller, item.action, item.params)
+                                        +GlanceItem(item, converter, useTooltip, inverse)
                                 else
-                                    text = self.getShortText(total, summary)
-                                    div(data-tooltip=text, data-tooltip-type="overflow")=text
+                                    +GlanceItem(item, converter, useTooltip, inverse)
 
 
 
