fixed for CHLK-3145 Teacher. Adding standards to an item. Standards should be layered

--- a/Chalkable.Web/assets/sass/partials/main/announcement/_add_standards_dialog.scss
+++ b/Chalkable.Web/assets/sass/partials/main/announcement/_add_standards_dialog.scss
@@ -8,7 +8,7 @@
         top: 200px;
         background-color: #eaeaea;
         min-height: 470px;
-        width: 974px;
+        width: 980px;
         @include border-radius(5px);
         .header{
           h1{
@@ -35,6 +35,10 @@
 
             table{
               border-spacing: 0;
+
+              .standards-row{
+                white-space: nowrap;
+              }
             }
 
             td.name-td{
