updated search bar for all roles

--- a/Chalkable.Web/assets/jade/sidebars/StudentSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/StudentSidebar.jade
@@ -5,7 +5,8 @@
         #search-bar
             +SearchBox(chlk.services.SearchService, "search", chlk.templates.search.SiteSearch)#siteSearch(
                 name="siteSearch",
-                clearAfterSelect = true
+                clearAfterSelect = true,
+                withButton = true
             )
 
     .wrapper
