--- a/Chalkable.Web/assets/jade/sidebars/AdminSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/AdminSidebar.jade
@@ -4,7 +4,8 @@
         #search-bar
             +SearchBox(chlk.services.SearchService, "search", chlk.templates.search.SiteSearch)#siteSearch(
                 name="siteSearch",
-                clearAfterSelect = true
+                clearAfterSelect = true,
+                withButton = true
             )
 
     .wrapper
