fixed create item

--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -68,7 +68,7 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
                     selectOtherMonths: true,
                     inCurrentMp: true
                 },
-                data-value=announcement.getExpiresDate().format('mm/dd/yy')
+                data-value=announcement.getExpiresDate() ? announcement.getExpiresDate().format('mm/dd/yy') : ''
                 placeholder=Msg.Due_date,
                 class='validate[required]'
             )#expiresdate
