--- a/Chalkable.Web/assets/jade/activities/people/UsersForGrid.jade
+++ b/Chalkable.Web/assets/jade/activities/people/UsersForGrid.jade
@@ -12,8 +12,11 @@ each item, i in self.getItems()
                 p.left= item.getFullName()
         else
             p.left= item.getFullName()
+        if item.isWithdrawn()
+            div(data-tooltip="Withdrawn").withdrawn
 
-        //if self.isHasAccess()
+
+    //if self.isHasAccess()
         .right
             +ActionLinkButton('message', 'sendToPerson', null, item.getId(), item.getFirstName(), item.getLastName()).message-button.blue-gradient-btn Message
         .clear
