fixed for CHLK-3160 When teacher presses "Enter" in the "Max score" field for a duplicated item, an item type will change

--- a/Chalkable.Web/assets/sass/partials/main/announcement/_form.scss
+++ b/Chalkable.Web/assets/sass/partials/main/announcement/_form.scss
@@ -638,6 +638,7 @@ BODY {
                     margin-right: 8px;
                     cursor: pointer;
                     position: relative;
+                    vertical-align: top;
 
                     .remove-standard{
                       display: none;
