--- a/Chalkable.Web/assets/sass/partials/main/announcement/_view.scss
+++ b/Chalkable.Web/assets/sass/partials/main/announcement/_view.scss
@@ -255,6 +255,7 @@ $red-color: #842727;
           .grey-button{
             padding: 7px 5px;
             margin-right: 7px;
+            vertical-align: top;
           }
         }
       }
