--- a/Chalkable.Web/assets/jade/activities/apps/app-market.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-market.jade
@@ -21,6 +21,7 @@ mixin AppIconLink(app)
     +ActionForm('appmarket', 'list')#app-market-filter
         +Hidden('start', self.apps.getPageIndex())
         +Hidden('totalCount', self.apps.getTotalCount())
+        +Hidden('actualCount', self.apps.getActualCount())
         +Hidden('pageSize', self.apps.getPageSize())
         +Hidden('scroll', 0)
         .app-filter
