--- a/Chalkable.Web/assets/jade/activities/people/UsersForGrid.jade
+++ b/Chalkable.Web/assets/jade/activities/people/UsersForGrid.jade
@@ -1,3 +1,9 @@
+mixin UserName(item)
+    .user-name-container.i-b.relative
+        p.left= item.getFullName()
+        if item.isWithdrawn()
+            div(data-tooltip=Msg.Withdrawn).withdrawn
+
 each item, i in self.getItems()
     index = item.getIndex ? (item.getIndex() || i) : i
     .row(class=(index == 0 ? 'selected' : ''), index=index)
@@ -9,11 +15,9 @@ each item, i in self.getItems()
                 +PersonImg(item, 47)
         if self.canViewInfo(item)
             +ProfileLink(item)
-                p.left= item.getFullName()
+                +UserName(item)
         else
-            p.left= item.getFullName()
-        if item.isWithdrawn()
-            div(data-tooltip="Withdrawn").withdrawn
+            +UserName(item)
 
 
     //if self.isHasAccess()
