fixed for CHLK-3188 [related with 53 891] When viewing Seating Chart, there's no message that displays telling the user there's no class on that date if outside the current grading period.

--- a/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPage.jade
@@ -25,7 +25,8 @@ hasStudentOnChart = self.hasStudentOnChart()
                 +DatePicker('date', self.getDate())(
                     data-options={
                         showOtherMonths: true,
-                        selectOtherMonths: true
+                        selectOtherMonths: true,
+                        inCurrentMp: true
                     },
                     data-controller= "attendance",
                     data-action="seatingChart",
