--- a/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
@@ -25,7 +25,8 @@ mixin SummaryInfo(presentCount, allStudentsCount)
                 +DatePicker('attendanceDate', self.getDate())(
                     data-options={
                         showOtherMonths: true,
-                        selectOtherMonths: true
+                        selectOtherMonths: true,
+                        inCurrentMp: true
                     },
                     data-controller= "attendance",
                     data-action="classList",
