fixed UI for CHLK-3189 Teacher. Teacher can't edit an item created on the past grading period

--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
@@ -30,6 +30,7 @@ announcement = self.getAnnouncement()
 topItems = topData.getTopItems()
 classId = announcement && announcement.getClassId() ? announcement.getClassId().valueOf() : null
 typeId = self.getSelectedTypeId()
+state = announcement.getState()
 classes = self.getClassInfo() ? self.getClassInfo().getTypesByClass() : []
 
 .announcement-form.loader-container
@@ -44,12 +45,12 @@ classes = self.getClassInfo() ? self.getClassInfo().getTypesByClass() : []
             .action-bar.not-transparent.buttons(class=(classId ? '' : 'x-hidden'))
                 .container.panel-bg
                     +AnnouncementTypeToolBar(classes, announcement, typeId)
-            .ann-form-container(class=(classId && typeId ? '' : 'x-hidden'))
+            .ann-form-container(class=(state || classId && typeId ? '' : 'x-hidden'))
                 +BaseAnnouncementFormContainer(announcement, classId, null, null, self.getUserRole()).announcement-form
                 if announcement.getState()
                     .duplicate-btn-container
                         +ActionLinkButton('announcement', 'showDuplicateForm', announcement.getId(), topData.getSelectedItemId()).special-button.blue-button.submit-btn=Msg.Duplicate.toUpperCase()
-            .choose-type(class=(classId && !typeId ? '' : 'x-hidden'))
+            .choose-type(class=(classId && !typeId && !state ? '' : 'x-hidden'))
             .choose-class(class=(classId ? 'x-hidden' : ''))
     else
         +LeftRightToolbar(topItems, chlk.templates.classes.TopBar, 'announcement', 'add')(
