removed Date Picker restrictions

--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -65,8 +65,7 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
             +DatePicker('expiresdate', announcement.getExpiresDate())(
                 data-options={
                     showOtherMonths: true,
-                    selectOtherMonths: true,
-                    inCurrentMp: true
+                    selectOtherMonths: true
                 },
                 data-value=announcement.getExpiresDate() ? announcement.getExpiresDate().format('mm/dd/yy') : ''
                 placeholder=Msg.Due_date,
