--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
@@ -8,7 +8,7 @@ mixin AnnouncementTypeToolBar(types, announcement, typeId)
                     data-typename=item.getName()
                 )
         BUTTON(
-            type = announcement.getState() ? "button" : "submit",
+            type = announcement && announcement.getState() ? "button" : "submit",
             name="submitType",
             value="save"
         )#announcement-type-btn.validate-skip.x-hidden
@@ -30,7 +30,7 @@ announcement = self.getAnnouncement()
 topItems = topData.getTopItems()
 classId = announcement && announcement.getClassId() ? announcement.getClassId().valueOf() : null
 typeId = self.getSelectedTypeId()
-state = announcement.getState()
+state = announcement && announcement.getState()
 classes = self.getClassInfo() ? self.getClassInfo().getTypesByClass() : []
 
 .announcement-form.loader-container
