fixed for CHLK-3207 Teacher. Creating an item. When teacher chooses a date out of the Grading Period and switches between classes the page will crash

--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -65,7 +65,8 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
             +DatePicker('expiresdate', announcement.getExpiresDate())(
                 data-options={
                     showOtherMonths: true,
-                    selectOtherMonths: true
+                    selectOtherMonths: true,
+                    inCurrentMp: true
                 },
                 data-value=announcement.getExpiresDate() ? announcement.getExpiresDate().format('mm/dd/yy') : ''
                 placeholder=Msg.Due_date,
